--- a/src/components/calendarWeek/style.scss
+++ b/src/components/calendarWeek/style.scss
@@ -1,7 +1,7 @@
 .week-container {
-  height: 68px;
+  height: 85px;
   text-align: center;
-  padding-bottom: 1.5rem;
+  padding-bottom: 3rem;
   width: 13%;
 }
 
